# wanyao-client

./: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  server.js  test-communication.html  功能测试报告.md  测试文档.md
.github/workflows/: build.yml
css/: common.css  theme.css
docs/: windows-setup.md  wsl2-setup.md
js/: common.js  python-module.js  serial.js  system-monitor.js  window-controls.js
python-embed/: python312._pth
python-scripts/: generate_icon.py  system_info.py  system_monitor.py
scripts/: check-dist.py  copy-assets.js
src/: index-debug.html  index-debug2.html  index-debug3.html  index-drag-test.html  index-error-test.html  index-full-test.html  index-func-test.html  index-no-debug.html  index-simple.html  index-test.html  index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/python-scripts/: example.py  system_monitor.py
src-tauri/src/: lib.rs
src-tauri/src/modules/: flasher.rs  mod.rs  network.rs  python.rs  serial.rs  system.rs  tester.rs  visualization.rs
src/css/: common.css  pages.css  theme.css
src/js/: common.js  flasher.js  network.js  python-module.js  serial.js  system-monitor.js  tester.js  visualization.js  window-controls.js
