[package]
name = "app"
version = "1.0.0"
description = "万遥客户端 - 一个现代化的客户端应用程序"
authors = ["Wanyao Team"]
license = "MIT"
repository = "https://github.com/goddeath23333/wanyao-client.git"
homepage = "https://github.com/goddeath23333/wanyao-client#readme"
edition = "2021"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = false
opt-level = 2
strip = false

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
codegen-units = 1
