[package]
name = "app"
version = "1.0.0"
description = "万遥客户端 - 一个现代化的客户端应用程序"
authors = ["Wanyao Team"]
license = "MIT"
repository = "https://github.com/goddeath23333/wanyao-client.git"
homepage = "https://github.com/goddeath23333/wanyao-client#readme"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
sysinfo = "0.31"
serialport = "4.5"
chrono = "0.4"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "time", "io-util", "process", "macros"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
csv = "1.3"
